Dodata funkcionalnost za potvrdu brisanja sa JavaScript-om

--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -17,7 +17,7 @@
     <button type="submit" class="btn btn-primary">Spremi</button>
 </form>
 
-<a href="@Url.Action("Index", "Categories")" class="btn btn-secondary">Nazad na kategorije</a>
+<a asp-action="Index" class="btn btn-secondary">Nazad na kategorije</a>
 
 
 
