--- a/Views/Categories/Details.cshtml
+++ b/Views/Categories/Details.cshtml
@@ -3,6 +3,7 @@
 <h2>Detalji kategorije</h2>
 
 <p><strong>Ime kategorije:</strong> @Model.Name</p>
+
 @if (Model.ImageData != null)
 {
     <p><strong>Slika:</strong></p>
@@ -13,5 +14,5 @@ else
     <p><strong>Slika:</strong> Nema slike</p>
 }
 
-<a href="@Url.Action("Index")" class="btn btn-secondary">Nazad na listu</a>
-<a href="@Url.Action("Edit", new { id = Model.CategoryId })" class="btn btn-primary">Uredi</a>
+<a asp-action="Index" class="btn btn-secondary">Nazad na listu</a>
+<a asp-action="Edit" asp-route-id="@Model.CategoryId" class="btn btn-primary">Uredi</a>
