--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -17,4 +17,4 @@
 
     <button type="submit" class="btn btn-primary">Spremi</button>
 </form>
-<a href="@Url.Action("Index")" class="btn btn-secondary">Nazad na listu</a>
+<a asp-action="Index" class="btn btn-secondary">Nazad na listu</a>
