Registracija,login i unos licnih podataka zavrseno

--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -43,5 +43,5 @@
 <a asp-action="Create" class="btn btn-primary">Dodaj novu kategoriju</a>
 
 @section Scripts {
-    <script src="~/js/confirmDelete.js"></script>
+    <script src="~/js/confirmDeleteCategory.js"></script>
 }
